force-app/main/default/objects/OrderItem/fields/qtc_Basis_Points_Static__c.field-meta.xml
<CustomField>
    <fullName>qtc_Basis_Points_Static__c</fullName>
    <description>twinned from Quote Line</description>
    <label>Basis Points Static</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>