force-app/main/default/objects/OrderItem/fields/qtc_Component_List_Term_Price__c.field-meta.xml
<CustomField>
    <fullName>qtc_Component_List_Term_Price__c</fullName>
    <description>twinned from quote line</description>
    <label>Component List Term Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>