force-app/main/default/objects/OrderItem/fields/qtc_Entitlement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>qtc_Entitlement_End_Date__c</fullName>
    <description>Entitlement End Date is mandatory for SW PIDs having PPM linked to it. Please enter date in format DD-MMM-YYYY.</description>
    <formula>Order.EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entitlement End Date</label>
    <type>Date</type>
</CustomField>