force-app/main/default/objects/OrderItem/fields/qtc_Interchange_Cost_Percentage__c.field-meta.xml
<CustomField>
    <fullName>qtc_Interchange_Cost_Percentage__c</fullName>
    <label>Interchange Cost %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>