force-app/main/default/objects/OrderItem/fields/qtc_Missing_Usage__c.field-meta.xml
<CustomField>
    <fullName>qtc_Missing_Usage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missing Usage</label>
    <type>Checkbox</type>
</CustomField>