force-app/main/default/objects/OrderItem/fields/qtc_MRR_Formula__c.field-meta.xml
<CustomField>
    <fullName>qtc_MRR_Formula__c</fullName>
    <label>MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>