force-app/main/default/objects/OrderItem/fields/qtc_Price_Per_Transaction__c.field-meta.xml
<CustomField>
    <fullName>qtc_Price_Per_Transaction__c</fullName>
    <label>Price Per Transaction (Auth fee)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>