force-app/main/default/objects/OrderItem/fields/qtc_Quote_Header_ID__c.field-meta.xml
<CustomField>
    <fullName>qtc_Quote_Header_ID__c</fullName>
    <description>This is mandatory field. This is to link Product ID/Bundle with Quote Header row. Any row with Quote Header ID not populated will be ignored.</description>
    <formula>Order.qtc_Quote_Header_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Header ID</label>
    <type>Text</type>
</CustomField>