force-app/main/default/objects/OrderItem/fields/qtc_SW_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>qtc_SW_Start_Date__c</fullName>
    <description>HSR Mass Upload - SW Start Date is mandatory field for SW PIDs.Please enter date in format DD-MMM-YYYY.</description>
    <formula>Order.EffectiveDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SW Start Date</label>
    <type>Date</type>
</CustomField>