force-app/main/default/objects/OrderItem/fields/qtc_Unbilled_Usage_Total__c.field-meta.xml
<CustomField>
    <fullName>qtc_Unbilled_Usage_Total__c</fullName>
    <label>Unbilled Usage Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>